--- a/ex011/index.html
+++ b/ex011/index.html
@@ -14,5 +14,17 @@
         <source media="(max-width: 1050px)" srcset="imagens/foto-m.png" type="image/png">
         <img src="imagens/foto-g.png" alt="Imagem flexivel" >
     </picture>
+    <h1>Reprozindo Audios</h1>
+    <p>Vamos aprender a reproduzir áudios em HTML5.</p>
+    <!-- <audio src="midias/happy-mistake.mp3" controls autoplay></audio> -->
+    <!-- MP3 WAV OGG -->
+     <audio preload="metadata" autoplay controls loop>
+        <source src="midias/guanacast-33.mp3" type="audio/mpeg">
+        <source src="midias/guanacast-33.ogg" type="audio/ogg">
+        <source src="midias/guanacast-33.wav" type="audio/wav">
+        <p>Infelizmente seu navegador não consegue reproduzir á. <a href="midias/guanacast-33.mp3">Clique aqui para baixar o arquivo mp3</a></p>
+
+     </audio>
+    
 </body>
 </html>
