--- a/ex012/index.html
+++ b/ex012/index.html
@@ -9,12 +9,18 @@
     <h1>Inserindo vídeos hospedados localmente</h1>
     <p>Este video está hospedado no meu próprio servidor.</p>
     
-    <video width="500" poster="imagens/WhatsApp Image 2025-09-24 at 15.05.13_e822ce5d.jpg" controls>
+    <video width="500" poster="imagens/WhatsApp Image 2025-09-24 at 15.05.13_e822ce5d.jpg" controls autoplay loop>
         <source src="midias/Meu-Vide_o.webm" type="video/webm">
         <source src="midias/Meu-Video.mp4" type="video/mp4">
         <p>Seu navegador nao tem compartibilidade para videos</p>
     </video>
 
+    <h1>Inserindo videos do YouTube</h1>
 
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/FdE5G95B7Mg?si=s0iWOXpaGfhyq-KJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    <h1>Inserindo videos com vimeo</h1>
+
+    <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/234134730?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" referrerpolicy="strict-origin-when-cross-origin" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="animation reel 2d 2017"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 </body>
 </html>
