--- a/desafios/d9/pagina_html.html
+++ b/desafios/d9/pagina_html.html
@@ -16,10 +16,27 @@
             margin-top: 20px;
         }
 
+        a {
+            color:  white;
+        
+        }
 
     </style>
 </head>
 <body>
-    
+    <h1>Curso de HTML</h1>
+    <div class="galeria">
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/rsFCVjr5yxc?si=Xw8d0fQ8EiEXNX1N" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+        <p><a href="https://www.youtube.com/watch?v=rsFCVjr5yxc&list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o&index=2" target="_blank">
+            Veja o curso completo
+        </a>
+
+        </p>
+        <a href="index.html">
+            <img src="imagens/voltar.png" alt="Imagem clicavel">
+        </a>
+    </div>
 </body>
 </html>
