--- a/desafios/d9/pagina_python.html
+++ b/desafios/d9/pagina_python.html
@@ -3,9 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Curso de Python 3</title>
+    <style>
+
+        body {
+            background-color: black;
+        }
+        h1 {
+            text-align: center;
+            color: white;
+        }
+
+        .galeria {
+            text-align: center;
+
+            margin-top: 20px;
+        }
+
+        
+
+        a {
+            color: white;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Curso de Python 3</h1>
+    <div class="galeria">
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/S9uPNppGsGo?si=K1uII6lQEd9inSOf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+        <p><a href="https://www.youtube.com/watch?v=S9uPNppGsGo&list=PLHz_AreHm4dlKP6QQCekuIPky1CiwmdI6" target="_blank">
+            Veja o curso completo
+        </a>
+        </p>
+        <a href="index.html">
+            <img src="imagens/voltar.png" alt="Imagem clicavel">
+        </a>
+
+    </div>
 </body>
 </html>
